--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   esc_pos_utils: ^1.1.0
   flutter_launcher_icons: "^0.9.2"
   mask_text_input_formatter: ^2.3.0
+  auto_size_text_pk: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
